# JuCode-CLI

./: .gitignore  AGENTS.md  Cargo.toml  README.md  claude-model-benchmarks.html  package.json
.github/workflows/: release-macos.yml  release.yml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: commands.rs  config.rs  core.rs  event.rs  extensions.rs  hooks.rs  lib.rs  llm.rs  oauth.rs  prompt.rs  session.rs  skills.rs  subagents.rs  tokens.rs  tools.rs  trust.rs  update.rs
crates/tui/: Cargo.toml
crates/tui/benches/: render_frame.rs
crates/tui/src/: bench_support.rs  input.rs  lib.rs  markdown.rs  picker.rs  state.rs  terminal_renderer.rs  tests.rs  tool_preview.rs  ui_builder.rs
docs/: agent-session-design.md  desktop-gui-design.md  releasing.md  tui-architecture.md
npm/cli/: package.json
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
scripts/npm/: pack-packages.mjs  release-targets.mjs  stage-binaries.mjs  sync-version.mjs
src/: agent_core.rs  config.rs  event.rs  llm.rs  main.rs  session.rs  tools.rs  tui.rs
