[package]
name = "jucode-cli"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "jucode"
path = "src/main.rs"

[workspace]
members = [".", "crates/agent-core", "crates/tui"]
resolver = "2"

[dependencies]
jucode-agent-core = { path = "crates/agent-core" }
jucode-tui = { path = "crates/tui" }
serde_json = "1"
