[package]
name = "jucode-agent-core"
version = "0.1.7"
edition = "2021"

[dependencies]
base64 = "0.22"
flate2 = "1"
getrandom = "0.2"
serde_json = "1"
semver = "1"
sha2 = "0.10"
tar = "0.4"
ureq = { version = "2", features = ["json"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
