[package]
name = "jucode-tui"
version = "0.1.8"
edition = "2021"

[features]
bench = []

[dependencies]
crossterm = "0.29"
jucode-agent-core = { path = "../agent-core" }
ratatui = { version = "0.29", default-features = false }
serde_json = "1"
unicode-width = "0.2"

[[bench]]
name = "render_frame"
harness = false
required-features = ["bench"]
