[package]
name = "jucode-tui"
version = "0.1.9"
edition = "2021"

[features]
bench = []

[dependencies]
jucode-agent-core = { path = "../agent-core" }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde_json = "1"
unicode-width = "0.2"

[[bench]]
name = "render_frame"
harness = false
required-features = ["bench"]
